  supported.  Users should use HADOOP_LOCAL_FILESYSTEM_BLOCKSIZE.

Misc Features & Changes

- MAGPIE_PRE_JOB_RUN and MAGPIE_POST_JOB_RUN can have multiple scripts
  listed by comma.

- MAGPIE_PRE_JOB_RUN and MAGPIE_POST_JOB_RUN can have arguments passed
  to each script.

- MAGPIE_SCRIPT_PATH and MAGPIE_SCRIPT_ARGS have been collapsed into
  one environment variable MAGPIE_JOB_SCRIPT.

- Default HDFS namenode port is now 8020 instead of 54310

- Update default Java to 1.8 in submission scripts.

Misc Documentation Changes

- No longer list support for versions that require re-compilation.

- No longer list support for versions that are not included in Magpie
  testsuite.

Backwards Compatibility Notes

o The following are possible changes users may need to make in older
  job submission scripts.

  - "MODE" variables (e.g. HADOOP_MODE, SPARK_MODE, etc.) are now
    named "JOB" (e.g. HADOOP_JOB, SPARK_JOB, etc.).

  - "JOB" variables no longer support "interactive" or "setuponly"
    options.  These are now controlled via MAGPIE_JOB_TYPE.

  - "JOB" variables no longer support "server", "launch", or
    "hdfsonly" options.  A service "launching" is always assumed
    unless MAGPIE_JOB_TYPE is set to "setuponly".

  - Many "JOB" variables no longer support "script" options, these are
    done via MAGPIE_JOB_TYPE.

  - "PHOENIX_MODE"'s "server" option is now configured through
    PHOENIX_START_QUERYSERVER.

  - HADOOP_SETUP_TYPE no longer takes input of "MR1", "MR2", "HDFS1",
    or "HDFS2".  It now only takes "MR", "YARN", or "HDFS".

  - SPARK_USE_YARN is now configured through SPARK_SETUP_TYPE.

  - HADOOP_FILESYSTEM_MODE no longer takes input of "magpienetworkfs"
    or "intellustre".

  - MAGPIE_SCRIPT_PATH and MAGPIE_SCRIPT_ARGS should be converted to
    MAGPIE_JOB_SCRIPT.

magpie 1.85
-----------
- Fix corner case, where if user sets identical LOCAL_DIR for all
  projects and NO_LOCAL_DIR is set, some file conflicts can occur.